--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dynamic = ["dependencies"]
 dependencies = { file = ["requirements.txt"] }
 
 [project.optional-dependencies]
-docs = ["sphinx", "furo", "sphinx-autodoc-typehints"]
+docs = ["sphinx", "furo"]
 test = ["pytest"]
 
 [project.urls]
