--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 packages = ["gnnbuilder"]
-include_package_data = true
+include-package-data = true
 
 
 [tool.ruff]
