formatting and packaging work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "esbonio.sphinx.confDir": ""
+    "esbonio.sphinx.confDir": "",
+    "grammarly.selectors": [
+        {
+            "language": "restructuredtext",
+            "scheme": "file"
+        }
+    ]
 }
