--- a/.github/workflows/pip_install_test.yaml
+++ b/.github/workflows/pip_install_test.yaml
@@ -20,7 +20,7 @@ jobs:
         run: python -m pip install --upgrade pip
 
       - name: Test PIP install
-        run: python -m pip install gnn-builder@https://github.com/sharc-lab/gnn-builder.git
+        run: python -m pip install git+https://github.com/sharc-lab/gnn-builder.git
             
       - name: Test Import GNN Builder
         run: python -c "import gnnbuilder as gnnb"
