--- a/.github/workflows/pip_install_test.yaml
+++ b/.github/workflows/pip_install_test.yaml
@@ -17,10 +17,10 @@ jobs:
           python-version: "3.10"
 
       - name: Install Dependencies
-        run: python -m pip install --upgrade pip
+        run: pip install --upgrade pip
 
       - name: Test PIP install
-        run: python -m pip install git+https://github.com/sharc-lab/gnn-builder.git
+        run: pip install git+https://github.com/sharc-lab/gnn-builder.git
             
       - name: Test Import GNN Builder
         run: python -c "import gnnbuilder as gnnb"
