--- a/.github/workflows/build_docs.yaml
+++ b/.github/workflows/build_docs.yaml
@@ -1,9 +1,9 @@
-name: docs_workflow
+name: build_docs
 
 on: workflow_dispatch
 
 jobs:
-  build_docs_job:
+  build_docs:
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
@@ -22,13 +22,12 @@ jobs:
           pip install -U .[docs]
 
       - name: Build Docs
-        run: |
-          sphinx-build -b html ./docs/source ./docs/build/
+        run: sphinx-build -b html ./docs/source ./docs/build/
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          publish_branch: gh-pages
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs/build/
-          force_orphan: true
+      # - name: Deploy
+      #   uses: peaceiris/actions-gh-pages@v3
+      #   with:
+      #     publish_branch: gh-pages
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     publish_dir: ./docs/build/
+      #     force_orphan: true
